integrating with viewer window
